<resources>
    <string name="app_name">ArmBuilder</string>
    <string name="tab_text_1">Measurement</string>
    <string name="tab_text_2">Exercises</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="select_device">Bluetooth</string>
    <string name="pref_summary_server_address">Enter server MAC address</string>
    <string name="pref_title_server_address">SERVER MAC Address</string>
    <string name="pref_key_server_address">SERVER_ADDRESS</string>
    <string name="max_x_key">max_x</string>
    <string name="max_x_title">timeline</string>
    <string name="max_x_summary">Enter max time</string>
    <string name="max_y_key">max_y</string>
    <string name="max_y_title">max force</string>
    <string name="max_y_summary">Enter max force(kg)</string>
    <string name="menu_item_share">share_menu</string>
    <string name="preference_name">Settings</string>
    <string name="threshold_value_key">threshold_value</string>
    <string name="threshold_value_title">threshold value</string>
    <string name="threshold_value_summary">Enter threshold value</string>
    <string name="target_value_key">target_value</string>
    <string name="target_value_title">target value</string>
    <string name="target_value_summary">Enter target value</string>
    <string name="measurement_fragment">Measurement</string>
    <string name="exercises_fragment">Exercises</string>
    <string name="hello_exercise_fragment">Hello E fragment</string>
    <string name="hello_measurement_fragment">Hello M fragment</string>
    <string name="detail_fragment">Detail Fragment</string>
    <string name="name">Name:</string>
    <string name="address">Address:</string>
    <string name="invalid_number_of_nicks">Total nicks (%1$d) should be a multiple of major nick interval (%2$d). Scale may be distorted.</string>
    <string name="invalid_min_max_ratio">Sum of min (%1$f) and max (%2$f) should be divisible by 2. Scale may be distorted.</string>
    <string name="invalid_min_max">Sum of min (%1$f) and max (%2$f) should be a multiple of value per nick (%3$f). Scale may be distorted.</string>
    <string name="scale_ok">Scale should be okay.</string>
    <string name="per_minute">kg</string>
    <string name="message_text">Enter exercise name</string>
    <string name="title_activity_result">ResultActivity</string>
</resources>
